--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,10 @@
 name: cc_rest_api
-description: "A new Flutter project."
-publish_to: 'none'
-
+description: "CC Rest Api is a Dart package that facilitates communication with REST APIs"
 version: 1.0.0+1
+homepage: https://github.com/codecores/cc_rest_api
 
 environment:
-  sdk: '>=3.5.0-153.0.dev <4.0.0'
+  sdk: '3.4.3'
 
 dependencies:
   flutter:
